# hkweather

./: .gitignore  README.md  analyse_landsat.ipynb  hkweather.ipynb  hkweather_old.ipynb  maxt.csv  mint.csv  precipitation.csv  pyproject.toml  run.py  test.ipynb
.ipynb_checkpoints/: hkweather-checkpoint.ipynb
.virtual_documents/: Untitled.ipynb
data/: locations.feather  maxt.csv  precipitation.csv  precipitation_daily_astore.csv  precipitation_daily_bunji.csv  precipitation_daily_chilas.csv  precipitation_daily_dainyour.csv  precipitation_daily_gilgit.csv  precipitation_daily_hunza.csv  precipitation_daily_ramma.csv  precipitation_daily_skardu.csv  precipitation_daily_ziarat.csv  temperature_daily_Astore.csv  temperature_daily_Bunji.csv  temperature_daily_Chilas.csv  temperature_daily_Dainyour.csv  temperature_daily_Gilgit.csv  temperature_daily_Hunza.csv  temperature_daily_Ramma.csv  temperature_daily_Skardu.csv  temperature_daily_Ziarat.csv  weather_daily.csv  weather_stations.parquet
hkweather/: __init__.py  landsat.py
